ins-cr-policy-reinsurance-accounting-be/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ins-cr-policy-accounting-be
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ins-cr-policy-accounting-be
    spec:
      containers:
        - name: ins-cr-policy-accounting-be
          image: gcr.io/infra-cross/ins-cr-policy-accounting-be:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
        - name: ins-cr-policy-accounting-esp
          image: gcr.io/endpoints-release/endpoints-runtime:1
          args: [
            "--http_port", "8081",
            "--backend", "127.0.0.1:8080",
            "--service", "api.ins-cr-policy-accounting-be.endpoints.ins-cross-clusters-dev.cloud.goog",
            "--rollout_strategy", "managed",
          ]
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP

---
#NODE PORT
apiVersion: v1
kind: Service
metadata:
  name: ins-cr-policy-accounting-np
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: ins-cr-policy-accounting-be
  type: NodePort
